--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-BOT_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
-SUPPORT_GROUP_ID=-1001234567890
+BOT_TOKEN=your_token_here
+SUPPORT_GROUP_ID=your_group_id
+DATABASE_URL=sqlite+aiosqlite:///bot_database.db
